--- a/Desktop/WinDesktop/WinDesktop.csproj
+++ b/Desktop/WinDesktop/WinDesktop.csproj
@@ -192,13 +192,13 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection">
-      <Version>3.0.0-preview8.19405.4</Version>
+      <Version>3.0.0-rc1.19456.10</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions">
-      <Version>3.0.0-preview8.19405.4</Version>
+      <Version>3.0.0-rc1.19456.10</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Primitives">
-      <Version>3.0.0-preview8.19405.4</Version>
+      <Version>3.0.0-rc1.19456.10</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Net.Http.Server">
       <Version>1.1.4</Version>
@@ -231,7 +231,7 @@
       <Version>4.3.0</Version>
     </PackageReference>
     <PackageReference Include="System.Diagnostics.DiagnosticSource">
-      <Version>4.6.0-preview8.19405.3</Version>
+      <Version>4.6.0-rc1.19456.4</Version>
     </PackageReference>
     <PackageReference Include="System.Diagnostics.Tools">
       <Version>4.3.0</Version>
@@ -288,7 +288,7 @@
       <Version>4.3.1</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
-      <Version>4.6.0-preview8.19405.3</Version>
+      <Version>4.6.0-rc1.19456.4</Version>
     </PackageReference>
     <PackageReference Include="System.Runtime.Extensions">
       <Version>4.3.1</Version>
