--- a/Lib/Neon.Kube.HyperV/Neon.Kube.HyperV.csproj
+++ b/Lib/Neon.Kube.HyperV/Neon.Kube.HyperV.csproj
@@ -35,7 +35,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CSharp" Version="4.6.0-preview8.19405.3" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.6.0-rc1.19456.4" />
   </ItemGroup>
 
   <ItemGroup>
