--- a/Test/Test.Neon.Cryptography.net/packages.config
+++ b/Test/Test.Neon.Cryptography.net/packages.config
@@ -1,16 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Extensions.Configuration" version="3.0.0-preview8.19405.4" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.0.0-preview8.19405.4" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="3.0.0-preview8.19405.4" targetFramework="net48" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="3.0.0-preview8.19405.4" targetFramework="net48" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.0.0-preview8.19405.4" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Logging" version="3.0.0-preview8.19405.4" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.0.0-preview8.19405.4" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Options" version="3.0.0-preview8.19405.4" targetFramework="net48" />
-  <package id="Microsoft.Extensions.Primitives" version="3.0.0-preview8.19405.4" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration" version="3.0.0-rc1.19456.10" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.0.0-rc1.19456.10" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="3.0.0-rc1.19456.10" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="3.0.0-rc1.19456.10" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.0.0-rc1.19456.10" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging" version="3.0.0-rc1.19456.10" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.0.0-rc1.19456.10" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Options" version="3.0.0-rc1.19456.10" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="3.0.0-rc1.19456.10" targetFramework="net48" />
   <package id="Microsoft.Net.Http.Server" version="1.1.4" targetFramework="net472" />
-  <package id="Microsoft.NETCore.Platforms" version="2.2.2" targetFramework="net48" />
+  <package id="Microsoft.NETCore.Platforms" version="3.0.0-rc1.19456.4" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
@@ -18,10 +18,10 @@
   <package id="System.Buffers" version="4.5.0" targetFramework="net48" />
   <package id="System.Collections" version="4.3.0" targetFramework="net472" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net472" />
-  <package id="System.ComponentModel.Annotations" version="4.6.0-preview8.19405.3" targetFramework="net48" />
+  <package id="System.ComponentModel.Annotations" version="4.6.0-rc1.19456.4" targetFramework="net48" />
   <package id="System.Console" version="4.3.1" targetFramework="net48" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.6.0-preview8.19405.3" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.6.0-rc1.19456.4" targetFramework="net48" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net472" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net472" />
@@ -37,14 +37,14 @@
   <package id="System.Net.Http" version="4.3.4" targetFramework="net48" />
   <package id="System.Net.Primitives" version="4.3.1" targetFramework="net48" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.6.0-preview5.19224.8" targetFramework="net48" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net472" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0-preview8.19405.3" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0-rc1.19456.4" targetFramework="net48" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net48" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net472" />
