--- a/Snippets/Cadence/Snippets.Cadence.HelloWorld/Snippets.Cadence.HelloWorld.csproj
+++ b/Snippets/Cadence/Snippets.Cadence.HelloWorld/Snippets.Cadence.HelloWorld.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <StartupObject>HelloWorld.Program</StartupObject>
+    <StartupObject></StartupObject>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
