--- a/Services/test-temporal/test-temporal.csproj
+++ b/Services/test-temporal/test-temporal.csproj
@@ -3,8 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>CadenceService</RootNamespace>
-    <Configurations>Debug;Release;CodeDoc</Configurations>
+    <RootNamespace>TemporalService</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,10 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Lib\Neon.Cadence\Neon.Cadence.csproj" />
     <ProjectReference Include="..\..\Lib\Neon.Common\Neon.Common.csproj" />
     <ProjectReference Include="..\..\Lib\Neon.Kube.Service\Neon.Kube.Service.csproj" />
-    <ProjectReference Include="..\..\Test\Test.Neon.Models.Cadence\Test.Neon.Models.Cadence.csproj" />
+    <ProjectReference Include="..\..\Lib\Neon.Temporal\Neon.Temporal.csproj" />
+    <ProjectReference Include="..\..\Test\Test.Neon.Models.Temporal\Test.Neon.Models.Temporal.csproj" />
   </ItemGroup>
 
 </Project>
